# retail_sim

./: .gitignore  README.md  RetailSim_Data_Pipeline_and_World_Model_Design.md  pyproject.toml
docs/: PROJECT_CONTEXT.md  index.md  section2_data_pipeline.md  section3_feature_engineering.md  section4.0_tensor_preparation.md  section4.1_tensor_prep_seq_dia.md  section5.0_training_data_architecture.md  section5.1_training.md  section5.2.1_training_deep_dive.md  section5.2.2_next_basket_prediction.md  section5.2.3_store_visit_prediction.md  section5.2_training_deep_dive.md  section5.3_training_components_explained.md  section6_data_flow_end_to_end.md
evals/: __init__.py  eval_data_pipeline.py  eval_feature_engineering.py  eval_tensor_preparation.py  run_all_evals.py
scripts/: extract_basket_attributes.py  runpod_setup.sh  sample_transactions.py
src/: __init__.py
src/data_pipeline/: __init__.py  debug_substitution.py  run_pipeline.py  stage1_price_derivation.py  stage2_product_graph.py  stage3_customer_store_affinity.py  stage4_mission_patterns.py
src/data_preparation/: __init__.py  dataloader.py  run_data_preparation.py  stage1_temporal_metadata.py  stage2_customer_histories.py  stage3_training_samples.py  stage4_next_basket_samples.py  stage4_tensor_cache.py
src/feature_engineering/: __init__.py  layer1_pseudo_brand.py  layer2_fourier_price.py  layer3_graph_embeddings.py  layer4_customer_history.py  layer5_store_context.py  run_feature_engineering.py
src/tensor_preparation/: __init__.py  dataset.py  dataset_optimized.py  run_tensor_preparation.py  t1_customer_context.py  t2_product_sequence.py  t3_temporal_context.py  t4_price_context.py  t5_store_context.py  t6_trip_context.py
src/training/: __init__.py  dataset.py  dataset_next_basket.py  dataset_store_visit.py  evaluate.py  evaluate_store_visit.py  losses.py  losses_next_basket.py  losses_store_visit.py  model.py  model_next_basket.py  model_store_visit.py  prepare_samples.py  prepare_tensor_cache.py  train.py  train_next_basket.py  train_store_visit.py
src/utils/: __init__.py
src/world_model/: __init__.py
tests/: __init__.py  conftest.py
tests/test_data_pipeline/: __init__.py  test_stage1_price_derivation.py  test_stage2_product_graph.py  test_stage3_customer_store_affinity.py  test_stage4_mission_patterns.py
tests/test_feature_engineering/: __init__.py  (+5 more)
vision_docs/: RetailSim_Technical_Vision_v7.0.md
(+10 files in other folders)
