[project]
name = "retail-sim"
version = "0.1.0"
description = "RetailSim: Data Pipeline & World Model for Retail Transaction Simulation"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "networkx>=3.0",
    "pyarrow>=14.0.0",
    "scipy>=1.11.0",
    "tqdm (>=4.67.1,<5.0.0)",
    "torch (==2.2.0)",
]

[tool.poetry.dependencies]
python = "^3.11"

[project.optional-dependencies]
torch = ["torch>=2.0.0,<2.9.0"]
notebooks = ["jupyter>=1.0.0", "ipykernel>=6.0.0"]
all = ["torch>=2.0.0,<2.9.0", "jupyter>=1.0.0", "ipykernel>=6.0.0"]

[project.scripts]
retail-data-pipeline = "src.data_pipeline.run_pipeline:main"
retail-feature-engineering = "src.feature_engineering.run_feature_engineering:main"
retail-tensor-preparation = "src.tensor_preparation.run_tensor_preparation:main"

[tool.poetry]
packages = [{include = "src"}]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.0.0"
ruff = "^0.1.0"
mypy = "^1.5.0"
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["src"]

# Black configuration
[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
